--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,6 +5,17 @@ $lightPink: #9FC131;
 $hardal: #DBF227;
 $olive: #D6D58E;
 
+
+/* Color Theme Swatches in Hex */
+$G1: #729CA6;
+$G2: #30734D;
+$G3: #01260A;
+$G4: #75A60D;
+$G5: #0D0D0D;
+
+
+
+
 @mixin forFlex {
     display: flex;
     justify-content: center;
