--- a/src/scss/header.module.scss
+++ b/src/scss/header.module.scss
@@ -1,7 +1,8 @@
 @import "./variables";
 header {
-    background-color: $pink;
+    background-color: $darkPink;
     padding: 3rem;
+    color: white;
 
      .title{
             text-align: center;
