--- a/src/scss/card.module.scss
+++ b/src/scss/card.module.scss
@@ -1,7 +1,38 @@
 @import "./variables";
 img {
-    width: 300px;
+    width: 40%;
 }
 .container {
    @include forFlex;
+   text-align: center;
+    margin:  2rem;
+
+   .card {
+        max-width: 400px;
+        border-radius: 1rem;
+        text-align: center;
+        padding: 1rem;
+        margin: 2rem;
+     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;;
+   }
+
+   h1{
+    color: black;
+   }
+   h2 {
+    color: $darkPink;
+   }
+
+   .btn-container {
+    button {
+        border-radius: 1rem;
+        border: none;
+        padding: 0.5rem;
+        cursor: pointer;
+        width: 5rem;
+        margin: 0.5rem;
+        background-color: rgb(99, 164, 180);
+        font-size: 1.2rem;
+    }
+   }
 }
